# db-query

./: .dockerignore  .gitignore  README.md  codex-cli-docker-toolbox.md  docker-compose.test.yml  docker-compose.yml  docker-troubleshooting.md
.cursor/rules/: specify-rules.mdc  style.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-01T17-21-56-898Z.yml  page-2026-04-01T17-22-57-915Z.yml  page-2026-04-01T17-23-58-051Z.yml  page-2026-04-01T17-24-33-847Z.yml  page-2026-04-01T17-27-27-509Z.yml  page-2026-04-01T17-27-37-908Z.yml  page-2026-04-05T06-29-53-124Z.yml  page-2026-04-05T06-30-08-292Z.yml  page-2026-04-05T06-31-24-495Z.yml  page-2026-04-05T06-31-36-850Z.yml  page-2026-04-06T16-13-04-309Z.yml  page-2026-04-06T16-14-51-312Z.yml  page-2026-04-06T16-17-28-987Z.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
backend/: .env.example  Dockerfile  Dockerfile.test  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  db_connection.py  metadata.py  query.py
backend/app/routers/: dbs.py
backend/app/services/: connection.py  llm.py  metadata.py  query.py  sql_select.py
backend/app/storage/: migrate.py  sqlite.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_connection.py  test_integration_mysql.py  test_integration_postgres.py  test_llm_generate.py  test_llm_helpers.py  test_metadata.py  test_migrate.py  test_query_json_safe.py  test_query_validate.py  test_sql_select.py
fixtures/: curl-body-bad-url.json  curl-body-natural.json  curl-body-put.json  curl-body-query.json  interview_db_seed.sql  run-api-curl.ps1  seed.sql  test.rest
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
site/: tokens.css  tokens.ts
specs/: cursor-markdown-autocomplete.md  instructions.md
(+30 files in other folders)
